--- a/libs/movies-list/src/lib/movies/movies.component.scss
+++ b/libs/movies-list/src/lib/movies/movies.component.scss
@@ -1,8 +1,8 @@
 .main {
     max-width: 100vw;
     list-style-type: none;
-    margin: 0.5em;
-    padding: 0.5em;
+    // margin: 0.5em;
+    // padding: 0.5em;
     display: flex;
     flex-wrap: no-wrap;
     overflow-y: hidden;
@@ -11,13 +11,27 @@
 
 .child {
     width: 400px;
-    padding-right: 20px;
+    // padding-right: 10px;
+    cursor: pointer;
 }
 
 img {
     height: 200px;
 }
 
+.spinner {
+    display: grid;
+    place-items: center;
+    height: 100vh;
+}
+
+.container {
+    margin-left: 20px;
+}
+
+.space-text {
+ padding-left: 15px;
+}
 
 // .activeSearchLink{
 //   color: red;
