--- a/libs/movie-detail/src/lib/movie-detail/movie-detail.component.html
+++ b/libs/movie-detail/src/lib/movie-detail/movie-detail.component.html
@@ -15,23 +15,21 @@
         <div class="absolute pointer" [ngStyle]="{'top': '200px', width: '600px', 'text-align': 'justify'}">{{ movieDetail.overview }}</div>
        </div>
 
-       <div class="absolute text-white" [ngStyle]="{'bottom': '100px', 'color': 'white'}">
-         <div class="text-xl">More Details</div>
-         <div [ngStyle]="{'display': 'flex', 'justify-content': 'space-between'}">
-            <div class="flex-none w-14 h-14 mr-4 ...">
-              Release
-              <div>{{ movieDetail.release_date | date}}</div>
-            </div>
-            <div class="flex-none pr-4">
-                Genres
-               <div *ngFor="let genre of movieDetail!.genres">{{ genre?.name}}</div>
-            </div>
-            <div class="flex-1">
-              Languages
-              <div *ngFor="let genre of movieDetail!.spoken_languages">{{ genre?.name}}</div>
-            </div>
+       
+       <div class="absolute" [ngStyle]="{'bottom': '100px', 'color': 'white', 'left': '20px'}">
+         <div class="">More Details</div>
+         <div class="card">
+          <div>
+            Release
+            <div>{{ movieDetail.release_date | date}}</div>
           </div>
-
+          <div>
+            Genres
+            <div *ngFor="let genre of movieDetail!.genres">{{ genre?.name}}</div>
+          </div>
+          <div> Languages
+            <div *ngFor="let genre of movieDetail!.spoken_languages">{{ genre?.name}}</div></div>
+        </div>
        </div>
 
     </div>
