--- a/libs/movie-detail/src/lib/movie-detail/movie-detail.component.html
+++ b/libs/movie-detail/src/lib/movie-detail/movie-detail.component.html
@@ -2,7 +2,7 @@
     <div class="h-40" >
         
     
-        <div [routerLink]="['/']">
+        <div [routerLink]="['/']" class="pointer">
             <ic-icon [icon]="icKeyboardBackspace"  color="red"  class="absolute ml-4" [ngStyle]="{'top': '82px', 'left': '25px'}"   size="24px"></ic-icon>
             <div   class="absolute text-white" [ngStyle]="{'top': '82px', 'left': '55px', 'color': 'white'}">Back</div>
         </div>
