--- a/libs/movies-list/src/lib/movies/movies.component.scss
+++ b/libs/movies-list/src/lib/movies/movies.component.scss
@@ -1,40 +1,22 @@
-.main {
-    max-width: 100vw;
-    list-style-type: none;
-    // margin: 0.5em;
-    // padding: 0.5em;
-    display: flex;
-    flex-wrap: no-wrap;
-    overflow-y: hidden;
-    overflow-x: scroll;
-}
-
-.child {
-    width: 400px;
-    // padding-right: 10px;
-    cursor: pointer;
-}
-
-img {
-    height: 200px;
-}
-
-.spinner {
-    display: grid;
-    place-items: center;
-    height: 100vh;
-}
-
-.container {
-    margin-left: 20px;
-}
-
-.space-text {
- padding-left: 15px;
+.container{
+    margin: 30px 0 20px 20px;
+    // margin-left: 20px;
+    min-width: 95vw;
 }
 
 
+.bg-yellow {
+    background-color: yellow;
+  }
+  .transition {
+    transition: background 0.25s ease, color 0.25s ease;
+  }
+  .active-slide {
+    background-color: green;
+    color: #fff;
+  }
+  .bg-blue {
+    background-color: blue;
+    color: #fff;
+  }
 
-  
-  
-  
