--- a/libs/movies-list/src/lib/movies/movies.component.scss
+++ b/libs/movies-list/src/lib/movies/movies.component.scss
@@ -1,9 +1,11 @@
 .container{
     margin: 30px 0 20px 20px;
-    // margin-left: 20px;
     min-width: 95vw;
 }
 
+.pointer {
+  cursor: pointer;
+}
 
 .bg-yellow {
     background-color: yellow;
